[gd_scene load_steps=8 format=3 uid="uid://dpc2wdvjhcjvm"]

[ext_resource type="Script" path="res://scenes/brush_selector/brush_selector.gd" id="1_n7tcb"]
[ext_resource type="Texture2D" uid="uid://4fxhaobhxlk7" path="res://assets/icons/linear_brush_icon.png" id="1_rd80l"]
[ext_resource type="Texture2D" uid="uid://dwb5atyu68kxe" path="res://assets/icons/linear_brush_icon_grey.png" id="2_kx4bg"]
[ext_resource type="Texture2D" uid="uid://cfhcq2g6g0p5b" path="res://assets/icons/quad_brush_icon.png" id="3_0muo0"]
[ext_resource type="Texture2D" uid="uid://du1ptg6wyb2ce" path="res://assets/icons/quad_brush_icon_grey.png" id="4_i2q36"]
[ext_resource type="Texture2D" uid="uid://dpbiumrgas28t" path="res://assets/icons/gaussian_brush_icon.png" id="5_vlgol"]
[ext_resource type="Texture2D" uid="uid://dw77vmmebq1v4" path="res://assets/icons/gaussian_brush_icon_grey.png" id="6_j61c7"]

[node name="BrushSelector" type="VBoxContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -292.0
offset_right = 35.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2
script = ExtResource("1_n7tcb")

[node name="BrushPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BrushPopup"]
layout_mode = 2

[node name="LinearBrush" type="TextureButton" parent="BrushPopup/VBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("1_rd80l")
texture_pressed = ExtResource("2_kx4bg")
texture_hover = ExtResource("2_kx4bg")
ignore_texture_size = true
stretch_mode = 4

[node name="RoundBrush" type="TextureButton" parent="BrushPopup/VBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("3_0muo0")
texture_pressed = ExtResource("4_i2q36")
texture_hover = ExtResource("4_i2q36")
ignore_texture_size = true
stretch_mode = 0

[node name="GaussianBrush" type="TextureButton" parent="BrushPopup/VBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("5_vlgol")
texture_pressed = ExtResource("6_j61c7")
texture_hover = ExtResource("6_j61c7")
ignore_texture_size = true
stretch_mode = 0

[node name="CurrentBrush" type="TextureButton" parent="."]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("1_rd80l")
texture_pressed = ExtResource("2_kx4bg")
texture_hover = ExtResource("2_kx4bg")
ignore_texture_size = true
stretch_mode = 4

[connection signal="button_up" from="BrushPopup/VBoxContainer/LinearBrush" to="." method="_on_linear_brush_button_up"]
[connection signal="button_up" from="BrushPopup/VBoxContainer/RoundBrush" to="." method="_on_round_brush_button_up"]
[connection signal="button_up" from="BrushPopup/VBoxContainer/GaussianBrush" to="." method="_on_gaussian_brush_button_up"]
[connection signal="button_up" from="CurrentBrush" to="." method="_on_current_brush_button_up"]
